<resources>
    <string name="app_name">App</string>

    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>

    <string name="error_invalid_email">用户名不合法</string>
    <string name="error_field_required">用户名不能为空</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登录</string>

    <string name="please_login">账号登陆</string>
    <string name="weibo_auth_canceled">取消授权</string>
    <string name="weibo_auth_exception">新浪服务器开小差啦~</string>
    <string name="weibo_auth_success">授权成功</string>
    <string name="weibo_token_to_string_format_1">Token：%1$s \\\\n有效期：%2$s</string>
    <string name="weibo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="search">Search</string>
    <string name="notification">notification</string>
    <string name="left_list_home">全部</string>
    <string name="left_list_hot">热门</string>
    <string name="left_list_find">发现新大陆</string>
    <string name="left_list_nearBy">周边</string>
    <string name="left_list_aboutMe">关于我</string>
    <string name="left_list_settings">设置</string>
    <string name="time_out">连接超时了哦~</string>
    <string name="load_error">网找不见了~</string>
    <string name="up_refresh">up_refresh</string>
    <string name="not_null">不能输入为空哦~</string>
    <string name="comment_succe">操作成功~</string>
    <string name="send">send</string>
</resources>
